<resources>
    <string name="app_name">PetBnb</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_btn_des">Google logo</string>
    <string name="facebook_application_id" translatable="false">232322257696832</string>
    <string name="facebook_login_protocol_scheme" translatable="false">232322257696832</string>

    <string name="home">Home</string>
    <string name="login">Log in</string>
    <string name="create_post">Create Post</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="photo_camera">Camera</string>
    <string name="photo_gallery">Gallery</string>

    <string name="genderImageDescription">Gender</string>
    <string name="ImageDes">Avatar</string>

    <string name="QRDescription">QR Image Code</string>

    <string name="str_name">Name</string>
    <string name="str_age">Age</string>
    <string name="str_sex">sex</string>

    <string name="str_petDesc">Tell us more about your pet</string>
    <string name="str_next">Next</string>
    <string name="str_over30">Over 30</string>
    <string name="str_petNameError">How should we call him/her?</string>
    <string name="str_petDescError">We will be so happy to hear about your pet!</string>

    <string name="str_petType">Pet Type</string>
    <string name="str_petSize">Pet Size</string>
    <string name="str_incompleteError">Hmmm, It seems like the form is not completed.</string>
    <string name="upload_pet_photos_text">Upload Pet Photos</string>
    <string name="upload_btn_text">Upload</string>
    <string name="str_phone">(+Country Code) Phone</string>
    <string name="str_address">Address</string>
    <string name="str_email">Email</string>
    <string name="str_city">City</string>
    <string name="str_zipCode">Zip Code</string>
    <string name="str_ownerNameError">How do you like to be called?</string>
    <string name="str_ownerAddressError">Please entre your address</string>
    <string name="str_ownerCityError">Which city are you living in?</string>
    <string name="str_ownerZipcodeError">Please enter your zip code</string>
    <string name="str_ownerEmailError">Please enter your valid email address</string>
    <string name="str_ownerPhoneError">Please enter your valid phone numbers with (+country code)</string>
    <string name="scanCodeDescription">Scan a QR Code</string>
    <string name="cancelScan">Cancel Scan</string>
    <string name="scan">Scan</string>
    <string name="str_otherTypePet">Other Type Pet</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="default_prefix">+1</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="yeas_old_fmt">%d years old</string>
    <string name="retry">retry</string>
    <string name="uploaded_msg">Photo upload has been completed!</string>

    <plurals name="photo">
        <item quantity="one">%d photo out of %d uploaded</item>
        <item quantity="other">%d photos out of %d uploaded</item>
    </plurals>

    <string name="signed_out">User signed out</string>
    <string name="login_failed">Failed to log in with your account</string>
    <string name="login_success">Successfully signed in</string>
    <string name="login_before_scan">Please login before you can scan the pet</string>
    <string name="pet_sitting">Pet sitting</string>
    <string name="yay">Yay!</string>
    <string name="other">Other</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string-array name="petType_arr">
        <item>Pet Type</item>
        <item>@string/dog</item>
        <item>@string/cat</item>
        <item>@string/other</item>
    </string-array>

    <string-array name="petSize_arr">
        <item>Pet Size</item>
        <item>Big</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>

    <string-array name="province_arr">
        <item>Province</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
    </string-array>

</resources>
