<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login_nav"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_nav"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_create_post"
            android:icon="@drawable/ic_create_nav"
            android:title="@string/create_post" />
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@drawable/qrcodeicon"
            android:title="Scan QR Code"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_nav"
            android:title="@string/log_out" />
    </group>
</menu>